--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
 <td><a href="https://capacitybay.org" target="_blank"><img src="./Engr s-k.png" alt="my image" width="251px" height="255"></a></td>
 <td><h1>Ishaq Tijani</h1>
 <p>Student at <a href="https://capacitybay.org">Capacitybay</a></p>
-<p>I am a full stark developer, I love tech a lot and look forward to be an expert</p>
-
-</td>
-
-
-</td>
+<p>I am a full stark developer, I love tech a lot and look forward to be an expert</p></td>
 </tr>
+
     </table>
 <hr>
 
@@ -37,7 +33,7 @@
     <th>Date</th>
     <th>&nbsp;&nbsp;&nbsp;&nbsp;Work</th>
 </tr>
-<tr>
+<tr>                                                                                                                                 
 <td>2017-2019</td>
 <td>&nbsp;&nbsp;Staff at UBA</td>
 </tr>
@@ -80,7 +76,7 @@
 </table>
 <hr>
 
-<a href="./pages/hobby/hubbies.html">My Hubby</a>
+<a href="./pages/hobby/">My Hubby</a>
 <a href="./pages/contact/contact.html">Contact Me</a>
 <a href="./pages/media/media.html">See my media</a>
 </body>
