--- a/pages/hobby/hubbies.html
+++ b/pages/hobby/hubbies.html
@@ -10,26 +10,15 @@
     <ol>
       <li>
         <a
-          href="https://www.youtube.com/channel/UC5_M-QkyDumUBIOGFhhVf_Q"
-          target="_blank"
-          >Coding</a
-        >
+          href="https://www.youtube.com/channel/UC5_M-QkyDumUBIOGFhhVf_Q"target="_blank">Coding</a>
       </li>
       <li>
-        <a
-          href="https://www.youtube.com/channel/UC5_M-QkyDumUBIOGFhhVf_Q"
-          target="_blank"
-          >Learning</a
-        >
+        <a href="https://www.youtube.com/channel/UC5_M-QkyDumUBIOGFhhVf_Q" target="_blank">Learning</a>
       </li>
       <li>
-        <a
-          href="https://www.youtube.com/channel/UC5_M-QkyDumUBIOGFhhVf_Q"
-          target="_blank"
-          >Travelling</a
-        >
+        <a href="https://www.youtube.com/channel/UC5_M-QkyDumUBIOGFhhVf_Q" target="_blank">Travelling</a>
       </li>
     </ol>
- <a href="/index.html">Go back to home</a>
+ <a href="../../index.html">Go back to home</a>
   </body>
 </html>
