--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -7,6 +7,9 @@
     <title>About</title>
 </head>
 <body>
-    
+    <h1>About Me</h1>
+
+    <p>I am a student at Capacitybay Learning web development</p>
+    <a href="../../index.html"> Go back to home</a>
 </body>
 </html>
