--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </table>
 <hr>
 
-<a href="./pages/hobby/">My Hubby</a>
+<a href="./pages/hobby/hubbies.html">My Hubby</a>
 <a href="./pages/contact/contact.html">Contact Me</a>
 <a href="./pages/media/media.html">See my media</a>
 </body>
