--- a/index.html
+++ b/index.html
@@ -1,84 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final html assignment</title>
-</head>
+  </head>
 
-<body>
- <table>
-<tr>
-<td><a href="https://capacitybay.org" target="_blank"><img src="./Engr s-k.png" alt="my image" width="251px" height="255"></a></td>
-<td><h1>Ishaq Tijani</h1>
-<p>Student at <a href="https://capacitybay.org">Capacitybay</a></p>
-<p>I am a full stark developer, I love tech a lot and look forward to be an expert</p></td>
-</tr>
-
+  <body>
+    <table>
+      <tr>
+        <td>
+          <a href="https://capacitybay.org" target="_blank"
+            ><img
+              src="./Engr s-k.png"
+              alt="my image"
+              width="251px"
+              height="255"
+          /></a>
+        </td>
+        <td>
+          <h1>Ishaq Tijani</h1>
+          <p>Student at <a href="https://capacitybay.org">Capacitybay</a></p>
+          <p>
+            I am a full stark developer, I love tech a lot and look forward to
+            be an expert
+          </p>
+        </td>
+      </tr>
     </table>
-<hr>
+    <hr />
 
-<h3>Learning And Teaching</h3>
-<ul>
-    <li>I am learning html</li>
-    <li>I am learning css</li>
-    <li>I am learning javascript</li>
-</ul>
-<hr>
+    <h3>Learning And Teaching</h3>
+    <ul>
+      <li>I am learning html</li>
+      <li>I am learning css</li>
+      <li>I am learning javascript</li>
+    </ul>
+    <hr />
 
-<h3>Work Experience</h3>
-<table>
-<tr>
-    <th>Date</th>
-    <th>&nbsp;&nbsp;&nbsp;&nbsp;Work</th>
-</tr>
-<tr>                                                                                                                                 
-<td>2017-2019</td>
-<td>&nbsp;&nbsp;Staff at UBA</td>
-</tr>
+    <h3>Work Experience</h3>
+    <table>
+      <tr>
+        <th>Date</th>
+        <th>&nbsp;&nbsp;&nbsp;&nbsp;Work</th>
+      </tr>
+      <tr>
+        <td>2017-2019</td>
+        <td>&nbsp;&nbsp;Staff at UBA</td>
+      </tr>
 
-<tr>
-<td>2019-2021</td>
-<td>&nbsp;&nbsp;Graphics Design</td>
-</tr>
+      <tr>
+        <td>2019-2021</td>
+        <td>&nbsp;&nbsp;Graphics Design</td>
+      </tr>
 
-<tr>
-<td>2021-2023</td>
-<td>&nbsp;&nbsp;Web Developer</td>
-</tr>
-</table>
+      <tr>
+        <td>2021-2023</td>
+        <td>&nbsp;&nbsp;Web Developer</td>
+      </tr>
+    </table>
 
-<hr>
+    <hr />
 
-<table>
-    <h3>Skills</h3>
-    <tr>
-<td>Web Developer</td>
-<td>&nbsp; ⭐⭐⭐⭐</td>
-<td>&nbsp;&nbsp;Graphics Design</td>
-<td>&nbsp;⭐⭐⭐⭐⭐</td>
-    </tr>
+    <table>
+      <h3>Skills</h3>
+      <tr>
+        <td>Web Developer</td>
+        <td>&nbsp; ⭐⭐⭐⭐</td>
+        <td>&nbsp;&nbsp;Graphics Design</td>
+        <td>&nbsp;⭐⭐⭐⭐⭐</td>
+      </tr>
 
-<tr>
-    <td>Frontend</td>
-    <td>⭐⭐⭐</td>
-    <td> &nbsp; Backend</td>
-    <td>⭐⭐⭐⭐⭐</td>
-</tr>
+      <tr>
+        <td>Frontend</td>
+        <td>⭐⭐⭐</td>
+        <td>&nbsp; Backend</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
 
-<tr>
-    <td> Javascript</td>
-    <td>⭐⭐⭐⭐</td>
-    <td>&nbsp; Copywriting</td>
-    <td>⭐⭐⭐⭐⭐</td>
-</tr>
-</table>
-<hr>
+      <tr>
+        <td>Javascript</td>
+        <td>⭐⭐⭐⭐</td>
+        <td>&nbsp; Copywriting</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+    </table>
+    <hr />
 
-<a href="./pages/hobby/hubbies.html">My Hubby</a>
-<a href="./pages/contact/contact.html">Contact Me</a>
-<a href="./pages/media/media.html">See my media</a>
-</body>
-
+    <a href="./pages/hobby/hubbies.html">My Hubby</a>
+    <a href="./pages/contact/contact.html">Contact Me</a>
+    <a href="./pages/media/media.html">See my media</a>
+    <a href="./pages/about/about.html">About us</a>
+  </body>
 </html>
