--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>About Me</h1>
 
     <p>I am a student at Capacitybay Learning web development</p>
     <a href="../../index.html"> Go back to home</a>
-</body>
+  </body>
 </html>
